test/sema/typeck/trait/super-trait-chain-ambiguous-assoc-type.dora
trait A {
    type Item;
}

trait B {
    type Item;
}

trait C: A + B {
    fn test(): Self::Item;
}
